# HT_DetectTrack

./: README.md
src/msgs/: README.md
src/msgs/globalplan/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/msgs/globalplan/msg/: GLOBAL_POINT.msg~  globalpoint.msg  globalpoint.msg~  localpose.msg  tasklist.msg  tasklist.msg~
src/msgs/module4/: CMakeLists.txt  package.xml
src/msgs/module4/msg/: Dynamic_Info.msg  Dynamic_Object.msg  EntityMap.msg  LOCAL_POS_DATA.msg  LidarHS128.msg  LidarHS64.msg  LidarRS128.msg  LidarRSBpear.msg  Pedestrian_Info.msg  Pedestrian_Object.msg  Pose6D.msg  fusionmap.msg  insMsg.msg  lidar128.msg  lidar32.msg  lidar64.msg  localcell.msg  localgrid.msg  pointInfo.msg  radar_object.msg  radar_objects.msg
src/msgs/msg_box/: CMakeLists.txt  package.xml
src/msgs/msg_box/msg/: Box.msg
src/msgs/msg_common/: CMakeLists.txt  package.xml
src/msgs/msg_common/msg/: Covariance.msg  GridPoint.msg  Time.msg
src/msgs/msg_lidar_obj/: CMakeLists.txt  package.xml
src/msgs/msg_lidar_obj/msg/: msg_lidar_obj.msg
src/msgs/msg_lidar_prep/: CMakeLists.txt  package.xml
src/msgs/msg_lidar_prep/msg/: LidarPoints.msg  msg_diagn_lidar_prep.msg  msg_lidar_prep.msg  msg_lidar_prepare.msg
src/msgs/msg_lidar_shape/: CMakeLists.txt  package.xml
src/msgs/msg_lidar_shape/msg/: DetectedObject.msg  DetectedObjectArray.msg
src/msgs/msg_obj/: CMakeLists.txt  package.xml
src/msgs/msg_obj/msg/: Obj.msg
src/msgs/msg_obj_perception/: CMakeLists.txt  package.xml
src/msgs/msg_obj_perception/msg/: Obj.msg
src/msgs/msg_safety_diagn/: CMakeLists.txt  package.xml
src/msgs/msg_safety_diagn/msg/: DiagnDataStruct.msg  msg_safety_diagn.msg
src/msgs/multiagent/: CMakeLists.txt  package.xml
src/msgs/multiagent/msg/: CameraSwitch.msg  DetectedVehicle.msg  FormationCtlMode.msg  FormationDescription.msg  LOCALPLAN_RESULT.msg  LOCAL_COORDINATE.msg  RemoteCmd.msg  SpeedSliceInfo.msg  TargetVehicles.msg  Trajectory.msg  VEHICLE2FOLLOW.msg  imageobject.msg
src/msgs/vehicle/: CMakeLists.txt  package.xml
src/msgs/vehicle/msg/: BTRemote.msg  BodyIMU.msg  ChasisStatus.msg  LOCAL_COORDINATE.msg  LocalPlan.msg  OrganizeintoteamsStatus.msg  PATH_DATA_PROPERTY.msg  PathBoundary.msg  RemoteCmd.msg  SpeedCMD.msg  SpeedStatus.msg  SteerCMD.msg  SteerStatus.msg  TrackerCMD.msg  TrackerPath.msg  VEHICLE2FOLLOW.msg  WAYPOINT.msg  insMsg.msg  localPoseMsg.msg
src/nodes/n_obj_track/: CMakeLists.txt  package.xml
src/nodes/n_obj_track/include/: track.h  tracker.h
src/nodes/n_obj_track/src/: convex_hull_granham.cpp  kalman_filter.cpp  n_obj_track.cpp  obj_visualization.cpp  roadSideTrack.hpp  track.cpp  tracker.cpp
src/nodes/n_point_cloud_segmentation/: CMakeLists.txt  package.xml
src/nodes/n_point_cloud_segmentation/include/: c_object_state.h  (+4 more)
(+4 files in other folders)
